adds more code examples